--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "emulator": "firebase emulators:start --import .firebase/emulator-data --export-on-exit"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
