--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "emulator": "firebase emulators:start --import .firebase/emulator-data --export-on-exit"
+    "emulator": "firebase emulators:start --import ./emulator-data --export-on-exit"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
