finished test cases for volunteer creation (ProfileCreation.tsx), and almost done with testing for index.ts (6 tests passsed, 1 failed)

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -10,7 +10,11 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "lib": ["es2020", "dom"],
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "baseUrl": ".", 
+    "paths": {
+      "@models/*": ["models/*"]
+    }
   },
   "include": ["src", "jest.setup.ts"]
 }
