--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,24 +1,19 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "NodeNext",
-    "esModuleInterop": true,
-    "moduleResolution": "nodenext",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "target": "es2017",
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
     "paths": {
-      "@models/*": [
-        "../models/*"
-      ]
+      "@models/*": ["../models/*"]
     }
   },
-  "compileOnSave": true,
-  "include": [
-    "src/**/*.ts",
-    "../models/*.ts"
-  ]
+  "include": ["src/**/*.ts", "../models/*.ts"],
+  "compileOnSave": true
 }
