--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -12,8 +12,11 @@
     "esModuleInterop": true,
     "paths": {
       "@models/*": ["../models/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types"], 
+    "types": [] 
   },
   "include": ["src/**/*.ts", "../models/*.ts"],
+  "exclude": ["../node_modules", "**/*.test.ts"],
   "compileOnSave": true
 }
