--- a/firebase.json
+++ b/firebase.json
@@ -46,12 +46,18 @@
     "firestore": {
       "port": 8080
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "storage": {
+      "port": 9199
+    }
   },
   "firestore": {
     "database": "(default)",
     "location": "asia-east1",
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
