--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,11 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
+    "dotenv": "^17.2.0",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
