--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,11 @@
   "main": "lib/functions/src/index.js",
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1",
+    "mjml": "^4.15.3",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
