--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1",
