--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
+    "@types/mjml": "^4.7.4",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^5.7.3"
   },
